test/visibility/import/relative/import-relative-error8.good
import-relative-error8.chpl:2: error: cannot use/import super from a toplevel module
